first checkin of qml code

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,7 +27,7 @@ IF( NOT DEFINED CMAKE_BUILD_TYPE OR NOT CMAKE_BUILD_TYPE )
 	SET(CMAKE_BUILD_TYPE "Release")
 ENDIF()
 
-FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Sql Network DBus Network Xml REQUIRED)
+FIND_PACKAGE(Qt5 COMPONENTS Quick Qml Core Widgets Sql Network DBus Network Xml REQUIRED)
 FIND_PACKAGE(Qt5LinguistTools REQUIRED)
 
 SET(CMAKE_AUTOMOC ON)
@@ -40,6 +40,8 @@ INCLUDE_DIRECTORIES(${Qt5Xml_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Qt5Sql_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Qt5DBus_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${Qt5Network_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${Qt5Quick_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${Qt5Qml_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GSTREAMER_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GLIB_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GOBJECT_INCLUDE_DIRS})
