refs #66 cleaned up genres

--- a/src/Helper/CMakeLists.txt
+++ b/src/Helper/CMakeLists.txt
@@ -37,6 +37,7 @@ SET(SOURCES
     MetaData/MetaDataList.cpp
     MetaData/Album.cpp
     MetaData/Artist.cpp
+	MetaData/Genre.cpp
 
     Parser/AbstractPlaylistParser.cpp
     Parser/M3UParser.cpp
