--- a/src/Components/Engine/CMakeLists.txt
+++ b/src/Components/Engine/CMakeLists.txt
@@ -13,6 +13,7 @@ SET(SOURCES
     Playback/CrossFader.cpp
     Playback/ChangeablePipeline.cpp
 	Playback/SoundOutReceiver.cpp
+	Playback/StreamRecorderData.cpp
 
     Convert/ConvertEngine.cpp
     Convert/ConvertPipeline.cpp
