--- a/src/Database/CMakeLists.txt
+++ b/src/Database/CMakeLists.txt
@@ -8,7 +8,8 @@ SET(HEADERS
 SET(SOURCES
 
     AbstractDatabase.cpp
-    DatabaseHandler.cpp
+	#    DatabaseHandler.cpp
+	LocalLibraryDatabase.cpp
     LibraryDatabase.cpp
     DatabaseSearchMode.cpp
     DatabaseBookmarks.cpp
