--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,7 +26,7 @@ IF( NOT DEFINED CMAKE_BUILD_TYPE OR NOT CMAKE_BUILD_TYPE )
 	SET(CMAKE_BUILD_TYPE "Release")
 ENDIF()
 
-FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Sql Network DBus Network Xml REQUIRED)
+FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Sql Network DBus Xml REQUIRED)
 FIND_PACKAGE(Qt5LinguistTools REQUIRED)
 
 SET(CMAKE_AUTOMOC ON)
