--- a/src/Interfaces/LibraryInterface/CMakeLists.txt
+++ b/src/Interfaces/LibraryInterface/CMakeLists.txt
@@ -5,6 +5,7 @@ ADD_SUBDIRECTORY(LibraryContainer)
 
 SET(SOURCES
     LibraryPluginHandler.cpp
+	LibraryPluginMenu.cpp
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
