--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,7 +31,7 @@ FIND_PACKAGE(Qt5 COMPONENTS Core Widgets Sql Network DBus Network Xml REQUIRED)
 FIND_PACKAGE(Qt5LinguistTools REQUIRED)
 
 SET(CMAKE_AUTOMOC ON)
-SET(CMAKE_AUTOUIC ON)
+#SET(CMAKE_AUTOUIC ON)
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 INCLUDE_DIRECTORIES(${Qt5Core_INCLUDE_DIRS})
