--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,3 @@
-
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
 PROJECT(sayonara)
 
 INCLUDE(FindPkgConfig)
@@ -16,7 +14,6 @@ PKG_CHECK_MODULES(GSTREAMER gstreamer-1.0 REQUIRED)
 PKG_CHECK_MODULES(GSTREAMER_BASE gstreamer-base-1.0 REQUIRED)
 PKG_CHECK_MODULES(GSTREAMER_BASE_APP gstreamer-app-1.0 REQUIRED)
 PKG_CHECK_MODULES(MTP libmtp)
-
 
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -77,6 +74,12 @@ LINK_DIRECTORIES(${GSTREAMER_LIBRARY_DIRS})
 
 IF(WIN32)
 	LINK_DIRECTORIES(${GIO_LIBRARY_DIRS})
+ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
+	FIND_LIBRARY(execinfo_LIB execinfo)
+	IF(NOT execinfo_LIB)
+		MESSAGE(FATAL_ERROR "FreeBSD requires execinfo library")
+	ENDIF()
+	SET(OS_LIBRARIES ${execinfo_LIB})
 ENDIF()
 
 
