--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
 IF( WITH_COTIRE )
     INCLUDE(cotire)
     MESSAGE("Compiling with Cotire")
+	ADD_DEFINITIONS(-D__STRICT_ANSI__)
 ELSE()
     MESSAGE("Compiling without Cotire")
 ENDIF()
