--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -48,6 +48,7 @@ TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 ADD_LIBRARY(sayonara_test SHARED ${SOURCES})
 TARGET_LINK_LIBRARIES(sayonara_test 
 	${APPLICATION_LIBRARIES}
+	say_gui_resources
 )
 
 
