--- a/src/Application/CMakeLists.txt
+++ b/src/Application/CMakeLists.txt
@@ -7,46 +7,47 @@ INCLUDE_DIRECTORIES(
 
 SET(SOURCES
 	Application.cpp
-    InstanceThread.cpp
+	InstanceThread.cpp
+	MetaTypeRegistry.cpp
 )
 
 SET(APPLICATION_LIBRARIES
-    say_gui_library
-    say_gui_directory_widget
+	say_gui_library
+	say_gui_directory_widget
 
-    say_gui_plugin_bookmarks
-    say_gui_plugin_broadcasting
-    say_gui_plugin_engine
-    say_gui_plugin_playlist_chooser
-    say_gui_plugin_stream
+	say_gui_plugin_bookmarks
+	say_gui_plugin_broadcasting
+	say_gui_plugin_engine
+	say_gui_plugin_playlist_chooser
+	say_gui_plugin_stream
 
-    say_gui_player
-    say_gui_preferences
+	say_gui_player
+	say_gui_preferences
 
-    say_interfaces_libraryinterface
-    say_comp_remote_control
+	say_interfaces_libraryinterface
+	say_comp_remote_control
 )
 
 IF(NOT WIN32 OR NOT DEFINED WIN32)
-    SET(APPLICATION_LIBRARIES
+	SET(APPLICATION_LIBRARIES
 	${APPLICATION_LIBRARIES}
 	say_comp_dbus
-    )
+	)
 ELSE()
-    SET(APPLICATION_LIBRARIES
-	    ${APPLICATION_LIBRARIES}
-	    sayonara_somafm
-	    sayonara_soundcloud
-    )
+	SET(APPLICATION_LIBRARIES
+		${APPLICATION_LIBRARIES}
+		sayonara_somafm
+		sayonara_soundcloud
+	)
 ENDIF()
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-    ${APPLICATION_LIBRARIES}
+	${APPLICATION_LIBRARIES}
 )
 
 ADD_LIBRARY(sayonara_test SHARED ${SOURCES})
-TARGET_LINK_LIBRARIES(sayonara_test 
+TARGET_LINK_LIBRARIES(sayonara_test
 	${APPLICATION_LIBRARIES}
 	say_gui_resources
 )
