--- a/src/GUI/Plugins/Engine/CMakeLists.txt
+++ b/src/GUI/Plugins/Engine/CMakeLists.txt
@@ -28,10 +28,10 @@ QT5_WRAP_UI(FORMS_UIC
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-    say_comp_engine
-    say_gui_plugins
+	say_comp_engine
+	say_interfaces_player_plugin
 )
 
 IF( WITH_COTIRE )
-    cotire(${PROJECT_NAME})
+	cotire(${PROJECT_NAME})
 ENDIF()
