--- a/src/GUI/Plugins/Broadcasting/CMakeLists.txt
+++ b/src/GUI/Plugins/Broadcasting/CMakeLists.txt
@@ -10,6 +10,6 @@ QT5_WRAP_UI(FORMS_UIC
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${FORMS_UIC})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
-    say_comp_broadcasting
-    say_gui_plugins
+	say_comp_broadcasting
+	say_interfaces_player_plugin
 )
