--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -15,7 +15,9 @@ ADD_SUBDIRECTORY(Lyrics)
 ADD_SUBDIRECTORY(Playlist)
 ADD_SUBDIRECTORY(PlaylistChooser)
 ADD_SUBDIRECTORY(PlayManager)
+ADD_SUBDIRECTORY(Preferences)
 ADD_SUBDIRECTORY(RemoteControl)
 ADD_SUBDIRECTORY(StreamPlugins)
 ADD_SUBDIRECTORY(Tagging)
+
 
