--- a/src/Components/CMakeLists.txt
+++ b/src/Components/CMakeLists.txt
@@ -8,7 +8,7 @@ IF( NOT WIN32 OR NOT DEFINED WIN32 )
 	ADD_SUBDIRECTORY(DBus)
 ENDIF()
 
-ADD_SUBDIRECTORY(DirectoryReader)
+ADD_SUBDIRECTORY(Directories)
 ADD_SUBDIRECTORY(Engine)
 ADD_SUBDIRECTORY(Library)
 ADD_SUBDIRECTORY(Lyrics)
