--- a/src/Components/Directories/CMakeLists.txt
+++ b/src/Components/Directories/CMakeLists.txt
@@ -1,10 +1,13 @@
-PROJECT(say_comp_directory_reader)
+PROJECT(say_comp_directories)
+
 SET(SOURCES
+	FileOperations.cpp
 	DirectoryReader.cpp
 )
 
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
+	say_comp_library
 	say_db
 	say_utils
 )
