--- a/src/GUI/Directories/CMakeLists.txt
+++ b/src/GUI/Directories/CMakeLists.txt
@@ -19,7 +19,7 @@ ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${UI_HEADERS})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	say_gui_info_dialog
 	say_gui_import_dialog
-	say_comp_directory_reader
+	say_comp_directories
 )
 
 IF( WITH_COTIRE )
