directory view update

--- a/src/GUI/Directories/CMakeLists.txt
+++ b/src/GUI/Directories/CMakeLists.txt
@@ -1,6 +1,7 @@
 PROJECT(say_gui_directory_widget)
 
 SET(SOURCES
+	DirectoryContextMenu.cpp
 	GUI_DirectoryWidget.cpp
 	DirectoryIconProvider.cpp
 	DirectoryDelegate.cpp
