pulseaudio alsa switch first commit

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,6 +13,7 @@ PKG_CHECK_MODULES(GOBJECT gobject-2.0 REQUIRED)
 PKG_CHECK_MODULES(GSTREAMER gstreamer-1.0 REQUIRED)
 PKG_CHECK_MODULES(GSTREAMER_BASE gstreamer-base-1.0 REQUIRED)
 PKG_CHECK_MODULES(GSTREAMER_BASE_APP gstreamer-app-1.0 REQUIRED)
+PKG_CHECK_MODULES(ALSA alsa REQUIRED)
 
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
@@ -41,6 +42,7 @@ INCLUDE_DIRECTORIES(${GOBJECT_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GSTREAMER_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${GSTREAMER_BASE_INCLUDE_DIRS})
 INCLUDE_DIRECTORIES(${TAGLIB_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${ALSA_INCLUDE_DIRS})
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src)
@@ -95,6 +97,11 @@ IF(WIN32)
 		api-ms-win-core-winrt-l1-1-0
 		api-ms-win-core-winrt-string-l1-1-0
 		${GIO_LIBRARIES}
+	)
+ELSE()
+	SET(OS_LIBRARIES
+		${OS_LIBRARIES}
+		${ALSA_LIBRARIES}
 	)
 ENDIF()
 
