--- a/src/Languages/sayonara_lang.ts.template
+++ b/src/Languages/sayonara_lang.ts.template
@@ -354,8 +354,8 @@
 <context>
     <name>GUI_EnginePreferences</name>
     <message>
-        <location filename="../../build-clang-debug/src/GUI/Preferences/ui_GUI_EnginePreferences.h" line="+70"/>
-        <source>Automatic</source>
+        <location filename="../GUI/Preferences/EnginePreferences/GUI_EnginePreferences.cpp" line="+22"/>
+        <source>Audio</source>
         <translation type="unfinished"></translation>
     </message>
 </context>
@@ -730,7 +730,7 @@
 <context>
     <name>GUI_Player</name>
     <message>
-        <location filename="../GUI/Player/GUI_Player.cpp" line="+392"/>
+        <location filename="../GUI/Player/GUI_Player.cpp" line="+395"/>
         <source>A new version is available!</source>
         <translation type="unfinished"></translation>
     </message>
@@ -2310,6 +2310,11 @@ Please choose another folder</source>
     </message>
     <message>
         <location line="+2"/>
+        <source>Quit</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location line="+2"/>
         <source>Radio</source>
         <translation type="unfinished"></translation>
     </message>
@@ -2412,12 +2417,12 @@ Please choose another folder</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="-61"/>
+        <location line="-63"/>
         <source>Mute</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="+75"/>
+        <location line="+77"/>
         <source>Retry</source>
         <translation type="unfinished"></translation>
     </message>
@@ -2647,7 +2652,7 @@ Please choose another folder</source>
 <context>
     <name>Library::LocalLibraryMenu</name>
     <message>
-        <location filename="../GUI/Library/Utils/LocalLibraryMenu.cpp" line="+188"/>
+        <location filename="../GUI/Library/Utils/LocalLibraryMenu.cpp" line="+200"/>
         <source>Live search</source>
         <translation type="unfinished"></translation>
     </message>
@@ -2719,7 +2724,13 @@ Please choose another folder</source>
 <context>
     <name>Menubar</name>
     <message>
-        <location filename="../GUI/Player/GUI_PlayerMenubar.cpp" line="+226"/>
+        <location filename="../GUI/Player/GUI_PlayerMenubar.cpp" line="+231"/>
+        <location line="+218"/>
+        <source>Minimize</source>
+        <translation type="unfinished"></translation>
+    </message>
+    <message>
+        <location line="-209"/>
         <source>View</source>
         <translation type="unfinished"></translation>
     </message>
@@ -2750,7 +2761,7 @@ Please choose another folder</source>
         <translation type="unfinished"></translation>
     </message>
     <message>
-        <location line="+41"/>
+        <location line="+51"/>
         <source>Please visit the forum at</source>
         <translation type="unfinished"></translation>
     </message>
