--- a/src/GUI/Utils/CMakeLists.txt
+++ b/src/GUI/Utils/CMakeLists.txt
@@ -53,6 +53,7 @@ QT5_WRAP_UI(UI_FILES
 ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES} ${UI_FILES})
 TARGET_LINK_LIBRARIES(${PROJECT_NAME}
 	Qt5::Widgets
+	Qt5::DBus
 	say_utils
 	say_comp_directories
 	say_comp_preferences
